# generp_theme

./:   README.md   pyproject.toml  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
generp_theme/: hooks.py
generptheme/: hooks.py  modules.txt
generptheme/public/css/: workspace.css
