[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generptheme"
version = "0.0.1"
description = "Custom Desk Workspace Theme for ERPNext"
authors = [{ name = "Ahmed", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"